--- a/.github/workflows/labeler-staging.yml
+++ b/.github/workflows/labeler-staging.yml
@@ -5,7 +5,7 @@ on:
     types:
       - opened
     branches:
-      - 'staging'
+      - 'master'
 
 jobs:
   add_label:
@@ -13,4 +13,4 @@ jobs:
     steps:
     - uses: actions-ecosystem/action-add-labels@v1
       with:
-        labels: "Branch: staging"
+        labels: "bug"
